--- a/Dockerfile.interconnect
+++ b/Dockerfile.interconnect
@@ -1,94 +1,83 @@
-FROM tensorflow/serving:1.11.0-gpu as tensorflow_serving_image
 FROM nvidia/cuda:9.0-base-ubuntu16.04
 
-LABEL maintainer="Amazon AI"
-LABEL com.amazonaws.sagemaker.capabilities.accept-bind-to-port=true
+LABEL maintainer="Craig Citro <craigcitro@google.com>"
 
-ARG framework_installable
-ARG framework_support_installable=sagemaker_tensorflow_container-1.0.0.tar.gz
-
-ENV NCCL_VERSION=2.3.5-2+cuda9.0
-ENV CUDNN_VERSION=7.3.1.20-1+cuda9.0
-ENV TF_TENSORRT_VERSION=4.1.2
-
+# Pick up some TF dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-        ca-certificates \
+        build-essential \
         cuda-command-line-tools-9-0 \
         cuda-cublas-9-0 \
         cuda-cufft-9-0 \
         cuda-curand-9-0 \
         cuda-cusolver-9-0 \
         cuda-cusparse-9-0 \
-        libcudnn7=${CUDNN_VERSION} \
-        libnccl2=${NCCL_VERSION} \
-        libgomp1 \
-        python \
         curl \
-        nginx \
+        libcudnn7=7.2.1.38-1+cuda9.0 \
+        libnccl2=2.2.13-1+cuda9.0 \
+        libfreetype6-dev \
+        libhdf5-serial-dev \
+        libpng12-dev \
+        libzmq3-dev \
+        pkg-config \
+        python \
+        python-dev \
+        rsync \
+        software-properties-common \
+        unzip \
         && \
-# The 'apt-get install' of nvinfer-runtime-trt-repo-ubuntu1604-4.0.1-ga-cuda9.0
-# adds a new list which contains libnvinfer library, so it needs another
-# 'apt-get update' to retrieve that list before it can actually install the
-# library.
-# We don't install libnvinfer-dev since we don't need to build against TensorRT,
-# and libnvinfer4 doesn't contain libnvinfer.a static library.
-    apt-get update && apt-get install -y --no-install-recommends \
-        nvinfer-runtime-trt-repo-ubuntu1604-4.0.1-ga-cuda9.0 && \
-    apt-get update && apt-get install -y --no-install-recommends \
-        libnvinfer4=${TF_TENSORRT_VERSION}-1+cuda9.0 && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
-    rm /usr/lib/x86_64-linux-gnu/libnvinfer_plugin* && \
-    rm /usr/lib/x86_64-linux-gnu/libnvcaffe_parser* && \
-    rm /usr/lib/x86_64-linux-gnu/libnvparsers*
+    rm -rf /var/lib/apt/lists/*
 
-# Python won’t try to write .pyc or .pyo files on the import of source modules
-ENV PYTHONDONTWRITEBYTECODE=1 PYTHONUNBUFFERED=1
+RUN apt-get update && \
+        apt-get install nvinfer-runtime-trt-repo-ubuntu1604-4.0.1-ga-cuda9.0 && \
+        apt-get update && \
+        apt-get install libnvinfer4=4.1.2-1+cuda9.0
 
-# Removing tests to free some space
-RUN set -ex; \
-	curl -k -O https://bootstrap.pypa.io/get-pip.py && \
-	python get-pip.py \
-		--disable-pip-version-check \
-		--no-cache-dir \
-		"pip==18.1" \
-	; \
-	pip --version; \
-	find /usr/local -depth \
-		\( \
-			\( -type d -a \( -name test -o -name tests \) \) \
-			-o \
-			\( -type f -a \( -name '*.pyc' -o -name '*.pyo' \) \) \
-		\) -exec rm -rf '{}' +; \
-	rm -f get-pip.py
+RUN curl -O https://bootstrap.pypa.io/get-pip.py && \
+    python get-pip.py && \
+    rm get-pip.py
 
-WORKDIR /
+RUN pip --no-cache-dir install \
+        Pillow \
+        h5py \
+        ipykernel \
+        jupyter \
+        keras_applications \
+        keras_preprocessing \
+        matplotlib \
+        numpy \
+        pandas \
+        scipy \
+        sklearn \
+        && \
+    python -m ipykernel.kernelspec
 
-# Install TF Serving pkg
-COPY --from=tensorflow_serving_image /usr/bin/tensorflow_model_server /usr/bin/tensorflow_model_server
+# --- DO NOT EDIT OR DELETE BETWEEN THE LINES --- #
+# These lines will be edited automatically by parameterized_docker_build.sh. #
+# COPY _PIP_FILE_ /
+# RUN pip --no-cache-dir install /_PIP_FILE_
+# RUN rm -f /_PIP_FILE_
 
+# Install TensorFlow GPU version.
+RUN pip --no-cache-dir install \
+    http://storage.googleapis.com/tensorflow/linux/gpu/tensorflow_gpu-0.0.0-cp27-none-linux_x86_64.whl
+# --- ~ DO NOT EDIT OR DELETE BETWEEN THE LINES --- #
 
-COPY $framework_installable .
-COPY $framework_support_installable .
+# RUN ln -s -f /usr/bin/python3 /usr/bin/python#
 
-RUN pip install -U --no-cache-dir \
-    numpy \
-    scipy \
-    sklearn \
-    pandas \
-    Pillow \
-    h5py \
-    tensorflow-serving-api==1.11.0 \
-    \
-    $framework_installable \
-    $framework_support_installable \
-    "sagemaker-tensorflow>=1.11,<1.12" && \
-    \
-    rm $framework_installable && \
-    rm $framework_support_installable && \
-    pip uninstall -y --no-cache-dir \ 
-    markdown \
-    tensorboard
+# Set up our notebook config.
+COPY jupyter_notebook_config.py /root/.jupyter/
+
+# Copy sample notebooks.
+COPY notebooks /notebooks
+
+# Jupyter has issues with being run directly:
+#   https://github.com/ipython/ipython/issues/7062
+# We just add a little wrapper script.
+COPY run_jupyter.sh /
+
+# For CUDA profiling, TensorFlow requires CUPTI.
+ENV LD_LIBRARY_PATH /usr/local/cuda/extras/CUPTI/lib64:$LD_LIBRARY_PATH
 
 COPY /program /opt/ml/code
 WORKDIR /opt/ml/code
