--- a/Dockerfile.interconnect
+++ b/Dockerfile.interconnect
@@ -57,7 +57,7 @@ RUN pip --no-cache-dir install \
 
 # Set up grpc
 RUN pip install enum34 futures mock six && \
-    pip install --pre 'protobuf>=3.0.0a3'
+    pip install --pre 'protobuf>=3.0.0a3' && \
     pip install -i https://testpypi.python.org/simple --pre grpcio
 
 # Set up Bazel.
