--- a/Dockerfile.inference
+++ b/Dockerfile.inference
@@ -39,8 +39,8 @@ WORKDIR /
 # Install TF Serving pkg
 COPY --from=tensorflow_serving_image /usr/bin/tensorflow_model_server /usr/bin/tensorflow_model_server
 
-COPY $framework_installable .
-COPY $framework_support_installable .
+#COPY $framework_installable .
+#COPY $framework_support_installable .
 
 RUN pip install -U --no-cache-dir \
     numpy \
